# PocketPlus

./: .gitignore  CMakeLists.txt  CodeCoverage.cmake  Doxyfile  README.md
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_report.md  change_report.md
src/: main.cpp  main_crossval_comp.cpp  main_crossval_decomp.cpp
src/compressor/: compressor.cpp  compressor.h  pocketpluscompressor.cpp  pocketpluscompressor.h
src/decompressor/: decompressor.cpp  decompressor.h  pocketplusdecompressor.cpp  pocketplusdecompressor.h
src/utils/: pocketplusutils.cpp  pocketplusutils.h  utils.cpp  utils.h
tests/: compressor_tests.cpp  decompressor_tests.cpp  tests.cpp  utils_tests.cpp
